--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-    <title>Document</title>
+    <title>Challenge</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="">
 
